Update Blockchain Lazic Nikic Neskovic Sekesan.tex

--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -37,7 +37,7 @@
 \maketitle
 
 \abstract{
-U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna. Ukratko je predstavljena istorija blokčejna, kao i glavne ideje potrebne za realizaciju blokčejna koji se nalazi iza jedne od najpoznatijih kriptovaluta - Bitcoin. \todo{Dopuniti kasnije...}
+U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na Bitkoin i pametni ugovori u okviru Ethereum mreže.
 \tableofcontents
 
 \newpage
