Pomerena sekcija "Problem potrošnje struje"

--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -207,6 +207,14 @@ Iako ne može vršiti nevalidne izmene na blokčejnu napadač može odlučiti da
 Pošto napadač može da kreira svaki blok na lancu brže nego ostatak mreže on efektivno odlučuje koje izmene
 će biti uključene u lanac, a koje ne.
 
+\subsection{Problem potrošnje struje}
+Uprkos benefitima postojanja digitalne valute koja ne zahteva verovanje centralnim autoritetima, veliku zabrinutost uzrokuje visoka potrošnja struje kriptovaluta koje koriste mehanizam ''proof of work''.
+
+Juna 2018. Banka za međunarodna poravnanja je kritikovala korišćenje javnih ''proof of work'' blokčejnova zbog njihove visoke potrošnje struje. \cite{shin2018chapterVcryptocurrencies}
+Jedna studija Univerziteta u Kembridžu iz 2021. je utvrdila da bitkojn (sa 121 teravat-časa godišnje) koristi više struje nego Argentina (sa 121 teravat-časa godišnje) i Holandija (sa 109 teravat-časa godišnje). \cite{criddle2021bitcoin-electricity}
+
+Zbog ovog problema neke blokčejn platforme poput Cardano, Solana, Polkadot i od skoro Ethereum koriste ''proof of stake'' model koji troši dosta manje struje nego ''proof of work'' model.
+
 \section{Primene}
 \label{sec:primene}
 
@@ -272,14 +280,6 @@ Prilikom validacije blokova u ovako izmenjenom blokčejnu moguće je za svaku tr
 \section{Zaključak}
 \label{sec:zakljucak}
 Pomoću raznih koncepta poput kriptografskih heš funkcija, digitalnih potpisa i merkle stabla, blokčejn je omogućio uspostavljanje kriptovaluta, sistema digitalnih transakcija koje se ne zasnivaju na poverenju i kojima ne treba centralni autoritet da bi održale vrednost. Kriptovalute takođe eliminišu ''double spending'' problem digitalnim potpisima i jako su otporne na druge vrste zloupotrebe sistema zbog ''proof of work'' i ''proof of stake'' modela. Najpoznatija i prva implementirana kriptovaluta je Bitcoin. Osim kriptovaluta, blokčejn je takođe omogućio nastanak pametnih ugovora, koji omogućavaju izvršavanje ugovora bez ljudske interakcije.
-
-\subsection{Problem potrošnje struje}
-Uprkos benefitima postojanja digitalne valute koja ne zahteva verovanje centralnim autoritetima, veliku zabrinutost uzrokuje visoka potrošnja struje kriptovaluta koje koriste mehanizam ''proof of work''.
-
-Juna 2018. Banka za međunarodna poravnanja je kritikovala korišćenje javnih ''proof of work'' blokčejnova zbog njihove visoke potrošnje struje. \cite{shin2018chapterVcryptocurrencies}
-Jedna studija Univerziteta u Kembridžu iz 2021. je utvrdila da bitkojn (sa 121 teravat-časa godišnje) koristi više struje nego Argentina (sa 121 teravat-časa godišnje) i Holandija (sa 109 teravat-časa godišnje). \cite{criddle2021bitcoin-electricity}
-
-Zbog ovog problema neke blokčejn platforme poput Cardano (2017), Solana (2020) i Polkadot (2020) koriste ''proof of stake'' model koji troši dosta manje struje nego ''proof of work'' model.
 
 \subsection{Akademska istraživanja}
 Dosta univerziteta je zasnovalo odseke sa fokusom na istraživanju blokčejna i kriptovaluta, uključujući i MIT, koji je to uradio 2017. godine.
