--- a/seminarski.bib
+++ b/seminarski.bib
@@ -26,3 +26,10 @@
   journal={BBC News},
   year={2021}
 }
+@article{eth-whitepaper,
+  author={Vitalik Buterin},
+  journal={white paper},
+  title={A next-generation smart contract and decentralized application platform},
+  volume={3},
+  year={2014}
+}
