Ispravljen redosled referenci

--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -38,6 +38,7 @@
 
 \abstract{
 U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na Bitkoin i pametni ugovori u okviru Ethereum mreže.
+}
 \tableofcontents
 
 \newpage
@@ -309,8 +310,7 @@ Pomoću raznih koncepta poput kriptografskih heš funkcija, digitalnih potpisa i
 
 
 \bibliography{seminarski} 
-\bibliographystyle{plain}
-
+\bibliographystyle{ieeetr}
 
 
 \end{document}
