--- a/14_LazicNikicNeskovicSekesan.tex
+++ b/14_LazicNikicNeskovicSekesan.tex
@@ -98,17 +98,17 @@ Sledi algoritam za heširanje: početna poruka podeljena je na više blokova. Na
 
 \begin{table}[H]
 \centering
- \begin{tabular}{|c| c| c| c| c|} 
+ \begin{tabular}{|c| c| c| c|} 
  \hline
- Algoritam & Dužina & Blok & Runde & Operacije\\ [0.5ex]
+ Algoritam & Dužina & Blok & Runde\\ [0.5ex]
  \hline
- MD5 & 128 & 512 & 64 & i, ili, xor, rot, + mod\\ 
+ MD5 & 128 & 512 & 64\\ 
  \hline
- SHA-1 & 160 & 512 & 80 & i, ili, xor, rot, + mod\\ 
+ SHA-1 & 160 & 512 & 80\\ 
  \hline
- SHA-2, SHA-256 & 256 & 512 & 64 & i, ili, xor, rot, + mod, šift udesno \\
+ SHA-2, SHA-256 & 256 & 512 & 64\\
   \hline
- SHA-2, SHA- 512 & 512 & 1024 & 80 & i, ili, xor, rot, + mod, šift udesno \\
+ SHA-2, SHA- 512 & 512 & 1024 & 80\\
  \hline
 \end{tabular}\vspace{0.5cm}\\
 \caption{Primer heš funkcija}
