Ujednačeno pisanje reči bitkoin

--- a/14_LazicNikicNeskovicSekesan.tex
+++ b/14_LazicNikicNeskovicSekesan.tex
@@ -37,7 +37,7 @@
 \maketitle
 
 \abstract{
-U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na Bitkoin i pametni ugovori u okviru Ethereum mreže.
+U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na bitkoin i pametni ugovori u okviru Ethereum mreže.
 }
 \tableofcontents
 
@@ -235,7 +235,7 @@ Pošto napadač može da kreira svaki blok na lancu brže nego ostatak mreže on
 Uprkos benefitima postojanja digitalne valute koja ne zahteva verovanje centralnim autoritetima, veliku zabrinutost uzrokuje visoka potrošnja struje kriptovaluta koje koriste mehanizam ''proof of work''.
 
 Juna 2018. Banka za međunarodna poravnanja je kritikovala korišćenje javnih ''proof of work'' blokčejnova zbog njihove visoke potrošnje struje \cite{shin2018chapterVcryptocurrencies}. 
-Jedna studija Univerziteta u Kembridžu iz 2021. je utvrdila da bitkojn (sa 121.36 teravat-časa godišnje) koristi više struje nego Argentina (sa 121 teravat-časa godišnje) i Holandija (sa 109 teravat-časa godišnje). \cite{criddle2021bitcoin-electricity}
+Jedna studija Univerziteta u Kembridžu iz 2021. je utvrdila da bitkoin (sa 121.36 teravat-časa godišnje) koristi više struje nego Argentina (sa 121 teravat-časa godišnje) i Holandija (sa 109 teravat-časa godišnje). \cite{criddle2021bitcoin-electricity}
 
 Zbog ovog problema neke blokčejn platforme poput Cardano, Solana, Polkadot i od skoro Ethereum koriste ''proof of stake'' model koji troši dosta manje struje nego ''proof of work'' model.
 
@@ -246,7 +246,7 @@ Zbog ovog problema neke blokčejn platforme poput Cardano, Solana, Polkadot i od
 Ubedljivo najpoznatija primena blokčejn tehnologije, zbog koje je glavno i nastala, je u domenu digitalnih valuta.
 Ideja decentralizacije valute posebno je primamljiva u svetu finansija jer se odbacuje potreba za poverenjem
 u centralni autoritet kao što su banke ili državne vlade da bi se vrednost valute održala. 
-Prva implementirana decentralizovana digitalna valuta - kriptovaluta koja je zasnovana na blokčejnu jeste čuveni Bitkoin.
+Prva implementirana decentralizovana digitalna valuta - kriptovaluta koja je zasnovana na blokčejnu jeste čuveni bitkoin.
 
 Bitkoin u osnovi radi na principu transakcija - prenosa novca sa jednog na drugi digitalni novčanik. Da bi sistem funkcionisao
 kao valuta, potrebno je da se vlasništvo novca koji se šalje može utvrditi. Ovo se postiže digitalnim potpisivanjem svake transakcije
